removed jpeg c code

--- a/app/src/main/cpp/sendasf/CMakeLists.txt
+++ b/app/src/main/cpp/sendasf/CMakeLists.txt
@@ -3,10 +3,10 @@ cmake_minimum_required(VERSION 3.4.1)
 find_library(log-lib log)
 
 add_library(sendasf SHARED
-        sendasf.cpp GenASFPkts.cpp DataStream.cpp jpegenc.cpp SenderSingleton.cpp
+        sendasf.cpp GenASFPkts.cpp DataStream.cpp SenderSingleton.cpp
         )
 
 include_directories(.
         ./include)
 
-target_link_libraries(sendasf ${log-lib} jpeg)
+target_link_libraries(sendasf ${log-lib})
