--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 27 08:08:32 MSK 2019
-sdk.dir=C\:\\DEVS\\android-sdk
+#Sat Nov 30 07:30:49 MSK 2019
+sdk.dir=E\:\\DEVS\\android-sdk-win
