--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 30 07:30:49 MSK 2019
-sdk.dir=E\:\\DEVS\\android-sdk-win
+#Mon Dec 02 09:03:55 MSK 2019
+cmake.dir=C\:\\DEVS\\android-sdk\\cmake\\3.10.2.4988404
+sdk.dir=C\:\\DEVS\\android-sdk
